Isabelle NEWS -- history of user-relevant changes
=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** Isabelle/jEdit Prover IDE ***

* The jEdit status line includes a widget for Isabelle/ML heap usage,
including an indication for ongoing garbage collection (as "ML
cleanup").

* The Monitor dockable provides buttons to request a full garbage
collection and sharing of live data on the ML heap. It also includes
information about the Java Runtime system.

* Update to jedit-5.6pre1, the latest pre-release. This version works
properly on macOS by default, without the special MacOSX plugin.


*** Document preparation ***

* Antiquotation @{bash_function} refers to GNU bash functions that are
checked within the Isabelle settings environment.

* Antiquotations @{scala}, @{scala_object}, @{scala_type},
@{scala_method} refer to checked Isabelle/Scala entities.


*** Pure ***

* Session Pure-Examples contains notable examples for Isabelle/Pure
(former entries of HOL-Isar_Examples).

* Definitions in locales produce rule which can be added as congruence
rule to protect foundational terms during simplification.


*** HOL ***

* Nitpick/Kodkod may be invoked directly within the running
Isabelle/Scala session (instead of an external Java process): this
improves reactivity and saves resources. This experimental feature is
guarded by system option "kodkod_scala" (default: false).

* Session HOL-Examples contains notable examples for Isabelle/HOL
(former entries of HOL-Isar_Examples, HOL-ex etc.).

* Simproc "defined_all" and rewrite rule "subst_all" perform more
aggressive substitution with variables from assumptions.
INCOMPATIBILITY, consider repairing proofs locally like this:

  supply subst_all [simp del] [[simproc del: defined_all]]

* Simproc "datatype_no_proper_subterm" rewrites equalities "lhs = rhs"